--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -9,44 +9,42 @@
     android:orientation="vertical"
     tools:context="cn.zengmingyang.mobile.zhihudaily.splash.SplashActivity">
 
-    <FrameLayout
+
+    <ImageView
+        android:id="@+id/iv_start_image"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="8">
+        android:layout_weight="9"/>
 
-        <ImageView
-            android:id="@+id/iv_start_image"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-
-        <TextView
-            android:id="@+id/tv_splash"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center|bottom"
-            android:layout_margin="16dp"
-            android:gravity="center"
-            android:textColor="@color/material_color_blue_gray_100"
-            android:textSize="15sp"/>
-    </FrameLayout>
 
     <TextView
-        android:textColor="@color/material_color_blue_gray_200"
-        android:textSize="24sp"
-        android:gravity="center_horizontal|bottom"
-        android:text="@string/title"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.7"/>
-<TextView
-    android:layout_weight="0.7"
-    android:textColor="@color/material_color_blue_gray_200"
-    android:text="@string/by_simonla"
-    android:gravity="center_horizontal|top"
-    android:textSize="12sp"
-    android:layout_marginLeft="80dp"
-    android:layout_marginStart="80dp"
-    android:layout_width="match_parent"
-    android:layout_height="0dp"/>
+        android:layout_weight="0.9"
+        android:gravity="center_horizontal|bottom"
+        android:text="@string/title"
+        android:textColor="@color/material_color_white"
+        android:textSize="27sp"/>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginLeft="80dp"
+        android:layout_marginStart="80dp"
+        android:layout_weight="0.3"
+        android:gravity="center_horizontal|top"
+        android:text="@string/by_simonla"
+        android:textColor="@color/material_color_white"
+        android:textSize="13sp"/>
+
+    <TextView
+        android:id="@+id/tv_splash"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_gravity="center|bottom"
+        android:layout_margin="16dp"
+        android:layout_weight="0.3"
+        android:gravity="center"
+        android:textColor="@color/material_color_blue_gray_100"
+        android:textSize="12sp"/>
 </LinearLayout>
