--- a/app/src/main/res/layout/activity_content.xml
+++ b/app/src/main/res/layout/activity_content.xml
@@ -12,13 +12,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="top"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:theme="@style/AppTheme.AppBarOverlay"
+        app:layout_behavior="cn.zengmingyang.mobile.zhihudaily.content.ToolbarBehavior">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar_content"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            app:layout_behavior=".ToolbarBehavior"
             app:popupTheme="@style/AppTheme.PopupOverlay"/>
 
     </android.support.design.widget.AppBarLayout>
@@ -67,6 +67,19 @@
 
 
     </android.support.v4.widget.NestedScrollView>
+
+    <android.support.v7.widget.CardView
+        app:cardBackgroundColor="@color/material_color_blue_500"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_gravity="bottom"
+        android:layout_margin="6dp"
+        android:background="@color/material_color_blue_400"
+        app:layout_behavior="cn.zengmingyang.mobile.zhihudaily.content.FooterBehavior">
+
+        <include layout="@layout/footer_content"/>
+
+    </android.support.v7.widget.CardView>
 
 
 </android.support.design.widget.CoordinatorLayout>
