--- a/app/src/main/res/layout/activity_content.xml
+++ b/app/src/main/res/layout/activity_content.xml
@@ -3,6 +3,7 @@
 <android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:card_view="http://schemas.android.com/tools"
     android:id="@+id/fl_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -69,12 +70,14 @@
     </android.support.v4.widget.NestedScrollView>
 
     <android.support.v7.widget.CardView
-        app:cardBackgroundColor="@color/material_color_blue_500"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_gravity="bottom"
         android:layout_margin="6dp"
-        android:background="@color/material_color_blue_400"
+        android:clickable="true"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:background="?attr/selectableItemBackground"
+        app:cardBackgroundColor="@color/material_color_blue_500"
         app:layout_behavior="cn.zengmingyang.mobile.zhihudaily.content.FooterBehavior">
 
         <include layout="@layout/footer_content"/>
