--- a/app/src/main/res/layout/header_banner.xml
+++ b/app/src/main/res/layout/header_banner.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout>
 <com.jude.rollviewpager.RollPagerView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/news_list_banner"
+    android:tag="@{@string/title}"
     android:layout_width="match_parent"
     android:layout_height="220dp"
     app:rollviewpager_play_delay="3000"/>
+</layout>
