--- a/app/src/main/res/layout/item_news.xml
+++ b/app/src/main/res/layout/item_news.xml
@@ -1,38 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/cv_item_girl"
-    android:layout_width="match_parent"
-    android:layout_height="100dp"
-    android:layout_marginTop="4dp"
-    android:layout_marginBottom="4dp"
-    android:background="?attr/selectableItemBackground"
-    android:foreground="?attr/selectableItemBackground">
+<layout>
 
-    <LinearLayout
+    <data>
+
+        <variable
+            name="news"
+            type="cn.zengmingyang.mobile.zhihudaily.data.bean.News.StoriesBean"/>
+
+        <variable
+            name="extra"
+            type="cn.zengmingyang.mobile.zhihudaily.data.bean.NewsExtra"/>
+    </data>
+
+    <android.support.v7.widget.CardView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/cv_item_news"
         android:layout_width="match_parent"
-        android:layout_margin="16dp"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="4dp"
+        android:layout_marginTop="4dp"
+        android:background="?attr/selectableItemBackground"
+        android:foreground="?attr/selectableItemBackground">
 
-        <TextView
-            android:id="@+id/tv_news_title"
-            android:layout_width="0dp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="6"
-            android:textColor="@color/material_color_black"
-            android:textSize="18sp" />
+            android:layout_margin="16dp"
+            android:orientation="horizontal">
 
-        <View
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="0.5" />
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="6"
+                android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/iv_news_image"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="2" />
-    </LinearLayout>
+                <TextView
+                    android:id="@+id/tv_news_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:minHeight="75dp"
+                    android:text="@{news.title}"
+                    android:textColor="@color/material_color_black"
+                    android:textSize="18sp"/>
 
-</android.support.v7.widget.CardView>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="20dp"
+                    android:text="@{@string/news_extra(extra.popularity,extra.comments)}"/>
+
+            </LinearLayout>
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0.5"/>
+
+            <ImageView
+                android:id="@+id/iv_news_image"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2"/>
+        </LinearLayout>
+
+    </android.support.v7.widget.CardView>
+</layout>
